--- a/VR-Project/VR-Project/Packages/manifest.json
+++ b/VR-Project/VR-Project/Packages/manifest.json
@@ -1,4 +1,13 @@
 {
+  "scopedRegistries": [
+    {
+      "name": "npmjs",
+      "url": "https://registry.npmjs.org/",
+      "scopes": [
+        "io.extendreality"
+      ]
+    }
+  ],
   "dependencies": {
     "com.unity.collab-proxy": "1.2.16",
     "com.unity.ext.nunit": "1.0.0",
@@ -12,7 +21,6 @@
     "com.unity.xr.legacyinputhelpers": "2.0.6",
     "com.unity.xr.oculus.standalone": "1.38.4",
     "com.unity.xr.openvr.standalone": "1.0.5",
-    "io.extendreality.vrtk.prefabs": "1.1.6",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
@@ -43,6 +51,9 @@
     "com.unity.modules.video": "1.0.0",
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
-    "com.unity.modules.xr": "1.0.0"
+    "com.unity.modules.xr": "1.0.0",
+    "io.extendreality.malimbe": "9.6.3",
+    "io.extendreality.zinnia.unity": "1.9.0",
+    "io.extendreality.vrtk.prefabs": "1.1.7"
   }
 }
