--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,8 @@ ExportedObj/
 # Unity3D generated meta files
 *.pidb.meta
 *.pdb.meta
+StreamingAssets.meta
+*.DS_Store
 
 # Unity3D Generated File On Crash Reports
 sysinfo.txt
